@date : 2023-12-20 @author : 김우렬 @version : 1.0.0:23122001 @comment : 마이페이지 추가

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#FFDBDBDB</color>
 
     <color name="color_59c4c8">#58c4c8</color>
     <color name="color_cd9745">#cd9745</color>
+
+    <color name="grade_c">#ff663d</color>
+    <color name="grade_v1">#4fc9cc</color>
+    <color name="grade_v2">#007082</color>
+    <color name="grade_v3">#D29E48</color>
+    <color name="grade_v4">#0F1B2B</color>
 </resources>
