--- a/app/src/main/res/layout/act_splash.xml
+++ b/app/src/main/res/layout/act_splash.xml
@@ -3,9 +3,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/shark">
+    android:background="@drawable/splash">
 
-    <ImageView
+    <!--<ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -25,6 +25,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
         android:layout_gravity="center|bottom"
-        android:src="@drawable/shark" />
+        android:src="@drawable/shark" />-->
 
 </FrameLayout>
