--- a/app/src/main/res/layout/cell_hotel.xml
+++ b/app/src/main/res/layout/cell_hotel.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginEnd="10dp"
     android:orientation="vertical">
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="wrap_content"
@@ -23,7 +24,7 @@
                 android:layout_width="200dp"
                 android:layout_height="120dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/hotel_grandinter"/>
+                android:src="@drawable/grand"/>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
@@ -32,20 +33,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_gravity="center_vertical">
+
         <View
             android:layout_width="2dp"
             android:layout_height="match_parent"
             android:background="@color/color_cd9745"/>
 
         <TextView
+            android:id="@+id/hotelName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="5dp"
             android:text="@string/room_reservation"
             android:textColor="@color/black"
-            android:textSize="13sp"
+            android:textSize="12dp"
             tools:ignore="RelativeOverlap" />
     </LinearLayout>
 
